loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:1: error: Missing closing brace `}' assumed here
var biscuit:Int=0
^